<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="app_logo_description">App Logo showing a hand inserting a vote to a ballot</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="representatives">Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="photo_of_the_representative">Photo of the Representative</string>
    <string name="twitter_link">Twitter link</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="personal_website_link">Personal Website link</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="address_line_2">Address line 2</string>
    <string name="address_line_1">Address line 1</string>
    <string name="find_my_representatives">Find my Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="permissions_are_needed">Location Permissions are needed to search by Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="no_data_to_show">No Data To Show</string>

</resources>
